tests/NormalTests/paczka1/small_fuzzy/86645820.err
Error in line 2: P81y27SbL A192 97,9
Error in line 1: b4Ox A192 24,9
